syntax = "proto3";

import "common/theila.proto";
import "talos/resource/resource.proto";

// Message kinds.
enum Kind {
  Error = 0; // A generic error response.
  OK = 1; // A generic ok response.

  Watch = 2; // Watch request.
  Unsubscribe = 3; // Unsubscribe request.
  Subscribed = 4; // Subscribed response.

  EventItemAdd = 5; // Watch add item event.
  EventItemUpdate = 6; // Watch update item event.
  EventItemDelete = 7; // Watch delete item event.
  EventError = 8; // Watch error which means that watch is invalid.
}

// Message metadata which helps matching request vs response and routing to any specific subscription.
message Metadata {
  // Uid match/route identifier.
  string uid = 1;
}

// Web socket message.
message Message {
  Kind kind = 1;
  Metadata metadata = 2;
  // Spec can vary on the message kind.
  // Can either have some specific data for the kind or be empty.
  string spec = 3;
}

message WatchSpec {
  // Resource name to watch.
  resource.WatchRequest resource = 1;
  // Source to get the watch data from.
  common.Runtime source = 2;
  // Context settings to fetch the data from.
  common.Context context = 3;
  // Selector represents watch label selector.
  string selector = 4;
}

// Watch response.
message SubscribedSpec {
  // Subscription uid generated for the subscription.
  string uid = 1;
}

// Unsubscribe request.
message UnsubscribeSpec {
  // Subscription to destroy.
  string uid = 1;
}

message ErrorSpec {
  string error = 1;
}

message ItemUpdateSpec {
  bytes old = 1;
  bytes new = 2;
}
